--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
-  "name": "demo",
-  "version": "0.0.0",
+  "name": "ng-wizard2",
+  "version": "2.0.0",
   "scripts": {
     "ng": "ng",
     "start": "ng serve -o --port=4201",
     "build": "ng build --aot",
-    "lib:build": "rimraf dist && ng build ng-wizard --prod",
-    "lib:themes": "mkdir dist\\ng-wizard\\themes && copy src\\ng-wizard\\themes\\*.css dist\\ng-wizard\\themes",
-    "lib:files": "copy README.md dist\\ng-wizard && copy LICENSE dist\\ng-wizard",
+    "lib:build": "rimraf dist && ng build ng-wizard --configuration=production",
+    "lib:themes": "mkdir dist/ng-wizard/themes && cp src/ng-wizard/themes/*.css dist/ng-wizard/themes",
+    "lib:files": "cp README.md dist/ng-wizard && cp LICENSE dist/ng-wizard",
     "lib:pack": "cd dist/ng-wizard && npm pack",
     "lib": "npm run lib:build && npm run lib:themes && npm run lib:files && npm run lib:pack",
     "test": "ng test ng-wizard",
